4809
For a related issue involving constructor parameter visibility, see SI-3194.

And your ticket made me realize that this bug represents a workaround to that one!
{code}
scala> class A(var x: Int)                                                      
defined class A

scala> class B(x: Int) extends A(x) { def f(z: Int) = this.x = z }              
<console>:6: error: reassignment to val
       class B(x: Int) extends A(x) { def f(z: Int) = this.x = z }
                                                             ^

scala> class B(x: Int) extends A(x) { self: A => def f(z: Int) = this.x = z }
defined class B

scala> new B(10)
res0: B = B@32e6e42e

scala> res0.x
res1: Int = 10

scala> res0.f(-75)

scala> res0.x
res3: Int = -75
{code}
Applying one bug to work around another: that's how we know we're engineers.
